[gd_scene load_steps=18 format=2]

[ext_resource path="res://Scenes/Objects/RobotBase/robotbase.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Objects/RobotBase/Sprites/robot_demo.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Objects/RobotBase/Animations/crouch.anim" type="Animation" id=3]
[ext_resource path="res://Scenes/Objects/RobotBase/Animations/falling.anim" type="Animation" id=4]
[ext_resource path="res://Scenes/Objects/RobotBase/Animations/falling_weapon.anim" type="Animation" id=5]
[ext_resource path="res://Scenes/Objects/RobotBase/Animations/idle.anim" type="Animation" id=6]
[ext_resource path="res://Scenes/Objects/RobotBase/Animations/idle_weapon.anim" type="Animation" id=7]
[ext_resource path="res://Scenes/Objects/RobotBase/Animations/jumping.anim" type="Animation" id=8]
[ext_resource path="res://Scenes/Objects/RobotBase/Animations/jumping_weapon.anim" type="Animation" id=9]
[ext_resource path="res://Scenes/Objects/RobotBase/Animations/run.anim" type="Animation" id=10]
[ext_resource path="res://Scenes/Objects/RobotBase/Animations/run_weapon.anim" type="Animation" id=11]
[ext_resource path="res://Scenes/Objects/RobotBase/Animations/standing_weapon_ready.anim" type="Animation" id=12]
[ext_resource path="res://Scenes/Objects/RobotBase/Sounds/sound_jump.wav" type="AudioStream" id=13]
[ext_resource path="res://Scenes/Objects/RobotBase/Sounds/sound_shoot.wav" type="AudioStream" id=14]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 27 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 1, 0, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 0, 0, 1 )

[node name="robotbase" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
vframes = 2
hframes = 16
frame = 18

[node name="smoke" type="Node2D" parent="sprite"]

[node name="bullet_shoot" type="Position2D" parent="sprite"]
position = Vector2( 30.659, 5 )

[node name="anim" type="AnimationPlayer" parent="."]
playback_speed = 2.0
anims/crouch = ExtResource( 3 )
anims/falling = ExtResource( 4 )
anims/falling_weapon = ExtResource( 5 )
anims/idle = ExtResource( 6 )
anims/idle_weapon = ExtResource( 7 )
anims/jumping = ExtResource( 8 )
anims/jumping_weapon = ExtResource( 9 )
anims/run = ExtResource( 10 )
anims/run_weapon = ExtResource( 11 )
anims/standing_weapon_ready = ExtResource( 12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
shape = SubResource( 1 )

[node name="sound_jump" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 13 )

[node name="sound_shoot" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 14 )

[node name="sprintbar" type="ProgressBar" parent="."]
margin_left = -21.0
margin_top = -36.0
margin_right = 22.0
margin_bottom = -29.0
custom_styles/fg = SubResource( 2 )
custom_styles/bg = SubResource( 3 )
value = 100.0
allow_lesser = true
percent_visible = false

[node name="ammolabel" type="Label" parent="."]
visible = false
margin_left = -32.0
margin_top = -53.0
margin_right = 33.0
margin_bottom = -39.0
text = "Ammo: "
